# referee

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  referee.cpp  referee.hpp  test.csv  test.ref
.github/workflows/: build.yml
cmake/: add-antlr4.cmake
core/: .factory.hpp.swp  antlr2ast.cpp  antlr2ast.hpp  builder.hpp  canonic.cpp  canonic.hpp  colormod.hpp  dwayer.hpp  factory.hpp  module.cpp  module.hpp  monitor.g4  negated.cpp  negated.hpp  position.hpp  referee.g4  semantics.hpp  strings.cpp  strings.hpp  symbol.hpp  syntax.cpp  syntax.hpp  utils.cpp  utils.hpp  visitor.hpp
core/visitors/: canonic.cpp  canonic.hpp  compile.cpp  compile.hpp  csvHeaders.cpp  csvHeaders.hpp  negated.cpp  negated.hpp  printer.cpp  printer.hpp  rewrite.cpp  rewrite.hpp  typecalc.cpp  typecalc.hpp
rdb/: database.cpp  database.hpp  main.cpp
src/: canonic.cpp  canonic.hpp  main.cpp  negated.cpp  negated.hpp  syntax.cpp  syntax.hpp  visitor.hpp
test/: canonic.cpp  logic.cpp  main.cpp  strings.cpp  test.csv  test.ref
test/logic/: fail.ref  pass.ref
